--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -1279,15 +1279,27 @@
     "    return df['imbalance']\n",
     "\n",
     "#get the quantile of ret based on DD.vol quantile\n",
-    "def get_vol_quantile(df, quantile = 2):\n",
-    "    #get the quantile of ret based on DD.vol quantile\n",
+    "def get_vol_quantile(df):\n",
+    "    #get the quantile of ret based on the mean of DD.vol quantile of the last minute\n",
     "    #return vol quantile\n",
-    "    df['vol_quantile'] = pd.qcut(df['DD.vol'], quantile, labels=False, duplicates='drop')\n",
+    "    df['vol_quantile'] = df.groupby(['date', 'minute'])['DD.vol'].transform(lambda x: np.mean(x[x != 0])).shift(1)\n",
     "    df['minute'] = df['interval'].apply(lambda x: x[0:5]) + ':00'\n",
-    "    #return the mean of each quantile\n",
-    "    for i in range(quantile):\n",
-    "        df['vol_quantile_' + str(i)] = df.groupby(['date', 'minute', 'msymbol_ukey'])['DD.ret'].transform(lambda x: np.mean(x[df['vol_quantile'] == i]))\n",
-    "        df['imbalance_quantile_' + str(i)] = df.groupby(['date', 'minute', 'msymbol_ukey'])['DD.volBuy'].transform(lambda x: np.mean(x[df['vol_quantile'] == i])) - df.groupby(['date', 'minute', 'msymbol_ukey'])['DD.volSell'].transform(lambda x: np.mean(x[df['vol_quantile'] == i]))\n",
+    "\n",
+    "    #positive quantile is the mean of ret when vol is bigger than mean of vol of the last minute\n",
+    "    def pos_func(x):\n",
+    "        x = x[x != 0]\n",
+    "        if len(x) == 0:\n",
+    "            return 0\n",
+    "        return np.mean(x[x > df['vol_quantile']])\n",
+    "    def neg_func(x):\n",
+    "        x = x[x != 0]\n",
+    "        if len(x) == 0:\n",
+    "            return 0\n",
+    "        return np.mean(x[x < df['vol_quantile']])\n",
+    "    df['pos_quantile'] = df.groupby(['date', 'minute'])['DD.ret'].transform(pos_func)\n",
+    "    df['neg_quantile'] = df.groupby(['date', 'minute'])['DD.ret'].transform(neg_func)\n",
+    "    df['pos_imbalance'] = df.groupby(['date', 'minute'])['DD.volBuy'].transform(pos_func) - df.groupby(['date', 'minute'])['DD.volSell'].transform(pos_func)\n",
+    "    df['neg_imbalance'] = df.groupby(['date', 'minute'])['DD.volBuy'].transform(neg_func) - df.groupby(['date', 'minute'])['DD.volSell'].transform(neg_func)\n",
     "    return df[[col for col in df.columns if '_quantile_' in col]]\n"
    ]
   },
@@ -1979,10 +1991,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process SpawnPoolWorker-21:\n",
+      "Process SpawnPoolWorker-19:\n",
+      "Process SpawnPoolWorker-23:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n",
+      "Process SpawnPoolWorker-20:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n",
+      "Process SpawnPoolWorker-22:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n",
+      "Process SpawnPoolWorker-24:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n",
+      "Process SpawnPoolWorker-25:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n",
+      "Process SpawnPoolWorker-26:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n",
+      "Process SpawnPoolWorker-28:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n",
+      "Process SpawnPoolWorker-29:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 314, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py\", line 114, in worker\n",
+      "    task = get()\n",
+      "  File \"/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/queues.py\", line 367, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "AttributeError: Can't get attribute 'job' on <module '__main__' (built-in)>\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[222], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m     res \u001b[39m=\u001b[39m pool\u001b[39m.\u001b[39mmap(job, \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m))\n\u001b[1;32m     20\u001b[0m     \u001b[39mprint\u001b[39m(res)\n\u001b[0;32m---> 22\u001b[0m multicore()\n",
+      "Cell \u001b[0;32mIn[222], line 19\u001b[0m, in \u001b[0;36mmulticore\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[39m#num of processes\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[39mprint\u001b[39m(mp\u001b[39m.\u001b[39mcpu_count())\n\u001b[0;32m---> 19\u001b[0m res \u001b[39m=\u001b[39m pool\u001b[39m.\u001b[39;49mmap(job, \u001b[39mrange\u001b[39;49m(\u001b[39m10\u001b[39;49m))\n\u001b[1;32m     20\u001b[0m \u001b[39mprint\u001b[39m(res)\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py:367\u001b[0m, in \u001b[0;36mPool.map\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    362\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmap\u001b[39m(\u001b[39mself\u001b[39m, func, iterable, chunksize\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    363\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    364\u001b[0m \u001b[39m    Apply `func` to each element in `iterable`, collecting the results\u001b[39;00m\n\u001b[1;32m    365\u001b[0m \u001b[39m    in a list that is returned.\u001b[39;00m\n\u001b[1;32m    366\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> 367\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_map_async(func, iterable, mapstar, chunksize)\u001b[39m.\u001b[39;49mget()\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py:768\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    767\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 768\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    769\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mready():\n\u001b[1;32m    770\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/multiprocessing/pool.py:765\u001b[0m, in \u001b[0;36mApplyResult.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    764\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwait\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 765\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_event\u001b[39m.\u001b[39;49mwait(timeout)\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/threading.py:607\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    605\u001b[0m signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flag\n\u001b[1;32m    606\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 607\u001b[0m     signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cond\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    608\u001b[0m \u001b[39mreturn\u001b[39;00m signaled\n",
+      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.10/threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 320\u001b[0m         waiter\u001b[39m.\u001b[39;49macquire()\n\u001b[1;32m    321\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    322\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "#multiprocessing\n",
+    "import multiprocessing as mp\n",
+    "import time\n",
+    "import numpy as np\n",
+    "p = 5\n",
+    "def job(x):\n",
+    "    #do some job\n",
+    "    #time.sleep(1)\n",
+    "    return x ** 2\n",
+    "\n",
+    "def multicore():\n",
+    "    #multiprocessing\n",
+    "    #input: None\n",
+    "    #output: None\n",
+    "    #return None\n",
+    "    pool = mp.Pool()\n",
+    "    #num of processes\n",
+    "    print(mp.cpu_count())\n",
+    "    res = pool.map(job, range(10))\n",
+    "    print(res)\n",
+    "\n",
+    "multicore()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sun Jul 30 17:30:48 EDT 2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "#systime time in command line\n",
+    "!date\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3, 4, 5]\n",
+    "x[::-1]"
+   ]
   },
   {
    "cell_type": "code",
