--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,26 +1284,20 @@
     "    #return vol quantile\n",
     "    df['minute'] = df['interval'].apply(lambda x: x[0:5]) + ':00'\n",
     "    df['vol_quantile'] = df.groupby(['date', 'minute'])['DD.vol'].transform(lambda x: np.mean(x[x != 0])).shift(60).fillna(0)   \n",
-    "    \n",
-    "\n",
-    "    #positive quantile is the mean of ret when vol is bigger than mean of vol of the last minute\n",
-    "    def pos_func(x):\n",
-    "        #x is of ret and vol\n",
-    "        x, y = x['DD.ret'], x['DD.vol']\n",
-    "        if len(x[x != 0]) == 0:\n",
-    "            return 0\n",
-    "        r = np.mean(x[(y > df.loc[y.index, 'vol_quantile']) & (x != 0)])\n",
-    "        return pd.DataFrame([r] * len(x), index=x.index)\n",
-    "    df['pos_quantile'] = df.groupby(['date', 'minute'])[['DD.ret', 'DD.vol']].apply(pos_func)\n",
-    "    # df['neg_quantile'] = df.groupby(['date', 'minute'])['DD.ret'].transform(neg_func)\n",
-    "    # df['pos_imbalance'] = df.groupby(['date', 'minute'])['DD.volBuy'].transform(pos_func) - df.groupby(['date', 'minute'])['DD.volSell'].transform(pos_func)\n",
-    "    # df['neg_imbalance'] = df.groupby(['date', 'minute'])['DD.volBuy'].transform(neg_func) - df.groupby(['date', 'minute'])['DD.volSell'].transform(neg_func)\n",
-    "    return df[[col for col in df.columns if '_quantile' in col]]\n"
+    "    df['vol_quantile_pos'] = df['DD.vol'] > df['vol_quantile']\n",
+    "    df['vol_quantile_neg'] = df['DD.vol'] < df['vol_quantile']\n",
+    "    df['pos_ret'] = df['DD.ret'] * df['vol_quantile_pos']\n",
+    "    df['neg_ret'] = df['DD.ret'] * df['vol_quantile_neg']\n",
+    "    df['pos_quantile'] = df.groupby(['date', 'minute'])['pos_ret'].transform('sum')\n",
+    "    df['neg_quantile'] = df.groupby(['date', 'minute'])['neg_ret'].transform('sum')\n",
+    "    df['pos_imbalance'] = df['DD.volBuy'] * df['vol_quantile_pos'] - df['DD.volSell'] * df['vol_quantile_pos']\n",
+    "    df['neg_imbalance'] = df['DD.volBuy'] * df['vol_quantile_neg'] - df['DD.volSell'] * df['vol_quantile_neg']\n",
+    "    return df[['pos_quantile', 'neg_quantile', 'pos_imbalance', 'neg_imbalance']]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -1327,113 +1321,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>interval</th>\n",
-       "      <th>msymbol_ukey</th>\n",
-       "      <th>DD.askSize</th>\n",
-       "      <th>DD.ask</th>\n",
-       "      <th>DD.bid</th>\n",
-       "      <th>DD.bidSize</th>\n",
-       "      <th>DD.isActive</th>\n",
-       "      <th>DD.volBuy</th>\n",
-       "      <th>DD.volSell</th>\n",
-       "      <th>DD.ret</th>\n",
-       "      <th>DD.vol</th>\n",
-       "      <th>minute</th>\n",
-       "      <th>vol_quantile</th>\n",
        "      <th>pos_quantile</th>\n",
+       "      <th>neg_quantile</th>\n",
+       "      <th>pos_imbalance</th>\n",
+       "      <th>neg_imbalance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.889190</td>\n",
-       "      <td>0.354537</td>\n",
-       "      <td>-2.729029</td>\n",
-       "      <td>1.005324</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.810885</td>\n",
-       "      <td>0.806624</td>\n",
-       "      <td>-0.142079</td>\n",
-       "      <td>-1.291604</td>\n",
-       "      <td>04:00:00</td>\n",
+       "      <td>1.389131</td>\n",
+       "      <td>-3.310574</td>\n",
+       "      <td>0.359980</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-0.259089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:00:01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.196176</td>\n",
-       "      <td>-0.303953</td>\n",
-       "      <td>-0.408876</td>\n",
-       "      <td>-0.934252</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.682896</td>\n",
-       "      <td>0.750187</td>\n",
-       "      <td>-0.368028</td>\n",
-       "      <td>-1.231962</td>\n",
-       "      <td>04:00:00</td>\n",
+       "      <td>1.389131</td>\n",
+       "      <td>-3.310574</td>\n",
+       "      <td>0.510476</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-0.259089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:00:02</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.662872</td>\n",
-       "      <td>-0.966219</td>\n",
-       "      <td>-0.110940</td>\n",
-       "      <td>0.210624</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.749493</td>\n",
-       "      <td>0.435653</td>\n",
-       "      <td>-0.434154</td>\n",
-       "      <td>-0.046500</td>\n",
-       "      <td>04:00:00</td>\n",
+       "      <td>1.389131</td>\n",
+       "      <td>-3.310574</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-0.259089</td>\n",
+       "      <td>1.299351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:00:03</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.150093</td>\n",
-       "      <td>-0.203496</td>\n",
-       "      <td>0.191474</td>\n",
-       "      <td>0.095754</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.415401</td>\n",
-       "      <td>-3.108694</td>\n",
-       "      <td>0.409636</td>\n",
-       "      <td>0.505684</td>\n",
-       "      <td>04:00:00</td>\n",
+       "      <td>1.389131</td>\n",
+       "      <td>-3.310574</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-0.259089</td>\n",
+       "      <td>0.209397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:00:04</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.213118</td>\n",
-       "      <td>0.112617</td>\n",
-       "      <td>-0.288921</td>\n",
-       "      <td>-0.864654</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.264013</td>\n",
-       "      <td>1.554337</td>\n",
-       "      <td>-0.326215</td>\n",
-       "      <td>0.186990</td>\n",
-       "      <td>04:00:00</td>\n",
+       "      <td>1.389131</td>\n",
+       "      <td>-3.310574</td>\n",
+       "      <td>-0.658892</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-0.259089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1441,163 +1369,71 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:16:35</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.275229</td>\n",
-       "      <td>-1.483550</td>\n",
-       "      <td>1.137764</td>\n",
-       "      <td>0.868980</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.668866</td>\n",
-       "      <td>0.959989</td>\n",
-       "      <td>0.297099</td>\n",
-       "      <td>-0.587119</td>\n",
-       "      <td>04:16:00</td>\n",
-       "      <td>0.266765</td>\n",
-       "      <td>-0.056107</td>\n",
+       "      <td>-0.559043</td>\n",
+       "      <td>-0.161340</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-0.898705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:16:36</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.048818</td>\n",
-       "      <td>-0.273671</td>\n",
-       "      <td>0.868855</td>\n",
-       "      <td>1.230662</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.261589</td>\n",
-       "      <td>-1.389504</td>\n",
-       "      <td>1.375923</td>\n",
-       "      <td>0.271503</td>\n",
-       "      <td>04:16:00</td>\n",
-       "      <td>0.266765</td>\n",
-       "      <td>-0.056107</td>\n",
+       "      <td>-0.559043</td>\n",
+       "      <td>-0.161340</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.100080</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:16:37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.725603</td>\n",
-       "      <td>1.053078</td>\n",
-       "      <td>-1.802108</td>\n",
-       "      <td>-0.398361</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.403447</td>\n",
-       "      <td>-0.255491</td>\n",
-       "      <td>1.238880</td>\n",
-       "      <td>-0.094070</td>\n",
-       "      <td>04:16:00</td>\n",
-       "      <td>0.266765</td>\n",
-       "      <td>-0.056107</td>\n",
+       "      <td>-0.559043</td>\n",
+       "      <td>-0.161340</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.003670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:16:38</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.435156</td>\n",
-       "      <td>-0.082961</td>\n",
-       "      <td>0.627428</td>\n",
-       "      <td>0.137455</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.421102</td>\n",
-       "      <td>-0.432753</td>\n",
-       "      <td>1.490888</td>\n",
-       "      <td>0.258841</td>\n",
-       "      <td>04:16:00</td>\n",
-       "      <td>0.266765</td>\n",
-       "      <td>-0.056107</td>\n",
+       "      <td>-0.559043</td>\n",
+       "      <td>-0.161340</td>\n",
+       "      <td>-2.024805</td>\n",
+       "      <td>-0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
-       "      <td>2020-01-01</td>\n",
-       "      <td>04:16:39</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.182242</td>\n",
-       "      <td>-0.371246</td>\n",
-       "      <td>-0.632857</td>\n",
-       "      <td>0.494369</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.338469</td>\n",
-       "      <td>-1.085085</td>\n",
-       "      <td>-0.799542</td>\n",
-       "      <td>1.432667</td>\n",
-       "      <td>04:16:00</td>\n",
-       "      <td>0.266765</td>\n",
-       "      <td>-0.056107</td>\n",
+       "      <td>-0.559043</td>\n",
+       "      <td>-0.161340</td>\n",
+       "      <td>0.663702</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 15 columns</p>\n",
+       "<p>1000 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           date  interval  msymbol_ukey  DD.askSize    DD.ask    DD.bid  \\\n",
-       "0    2020-01-01  04:00:00             1    1.889190  0.354537 -2.729029   \n",
-       "1    2020-01-01  04:00:01             1   -0.196176 -0.303953 -0.408876   \n",
-       "2    2020-01-01  04:00:02             1   -1.662872 -0.966219 -0.110940   \n",
-       "3    2020-01-01  04:00:03             1    1.150093 -0.203496  0.191474   \n",
-       "4    2020-01-01  04:00:04             1    1.213118  0.112617 -0.288921   \n",
-       "..          ...       ...           ...         ...       ...       ...   \n",
-       "995  2020-01-01  04:16:35             1   -1.275229 -1.483550  1.137764   \n",
-       "996  2020-01-01  04:16:36             1    2.048818 -0.273671  0.868855   \n",
-       "997  2020-01-01  04:16:37             1   -0.725603  1.053078 -1.802108   \n",
-       "998  2020-01-01  04:16:38             1   -1.435156 -0.082961  0.627428   \n",
-       "999  2020-01-01  04:16:39             1    0.182242 -0.371246 -0.632857   \n",
+       "     pos_quantile  neg_quantile  pos_imbalance  neg_imbalance\n",
+       "0        1.389131     -3.310574       0.359980       0.000000\n",
+       "1        1.389131     -3.310574       0.510476       0.000000\n",
+       "2        1.389131     -3.310574       0.000000       1.299351\n",
+       "3        1.389131     -3.310574       0.000000       0.209397\n",
+       "4        1.389131     -3.310574      -0.658892       0.000000\n",
+       "..            ...           ...            ...            ...\n",
+       "995     -0.559043     -0.161340      -0.000000      -0.898705\n",
+       "996     -0.559043     -0.161340       0.000000       0.100080\n",
+       "997     -0.559043     -0.161340       0.000000       0.003670\n",
+       "998     -0.559043     -0.161340      -2.024805      -0.000000\n",
+       "999     -0.559043     -0.161340       0.663702       0.000000\n",
        "\n",
-       "     DD.bidSize  DD.isActive  DD.volBuy  DD.volSell    DD.ret    DD.vol  \\\n",
-       "0      1.005324            1  -0.810885    0.806624 -0.142079 -1.291604   \n",
-       "1     -0.934252            1   0.682896    0.750187 -0.368028 -1.231962   \n",
-       "2      0.210624            1  -0.749493    0.435653 -0.434154 -0.046500   \n",
-       "3      0.095754            1   0.415401   -3.108694  0.409636  0.505684   \n",
-       "4     -0.864654            1   1.264013    1.554337 -0.326215  0.186990   \n",
-       "..          ...          ...        ...         ...       ...       ...   \n",
-       "995    0.868980            1  -1.668866    0.959989  0.297099 -0.587119   \n",
-       "996    1.230662            1   1.261589   -1.389504  1.375923  0.271503   \n",
-       "997   -0.398361            1  -1.403447   -0.255491  1.238880 -0.094070   \n",
-       "998    0.137455            1   0.421102   -0.432753  1.490888  0.258841   \n",
-       "999    0.494369            0  -0.338469   -1.085085 -0.799542  1.432667   \n",
-       "\n",
-       "       minute  vol_quantile  pos_quantile  \n",
-       "0    04:00:00      0.000000     -0.259089  \n",
-       "1    04:00:00      0.000000     -0.259089  \n",
-       "2    04:00:00      0.000000     -0.259089  \n",
-       "3    04:00:00      0.000000     -0.259089  \n",
-       "4    04:00:00      0.000000     -0.259089  \n",
-       "..        ...           ...           ...  \n",
-       "995  04:16:00      0.266765     -0.056107  \n",
-       "996  04:16:00      0.266765     -0.056107  \n",
-       "997  04:16:00      0.266765     -0.056107  \n",
-       "998  04:16:00      0.266765     -0.056107  \n",
-       "999  04:16:00      0.266765     -0.056107  \n",
-       "\n",
-       "[1000 rows x 15 columns]"
+       "[1000 rows x 4 columns]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "get_vol_quantile(df)"
    ]
   },
   {
