--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1285,7 @@
     "    df['minute'] = df['interval'].apply(lambda x: x[0:5]) + ':00'\n",
     "    df['vol_quantile'] = df.groupby(['date', 'minute'])['DD.vol'].transform(lambda x: np.mean(x[x != 0])).shift(60).fillna(0)   \n",
     "    df['vol_quantile_pos'] = df['DD.vol'] > df['vol_quantile']\n",
-    "    df['vol_quantile_neg'] = df['DD.vol'] < df['vol_quantile']\n",
+    "    df['vol_quantile_neg'] = (df['DD.vol'] < df['vol_quantile']) * (df['DD.vol'] != 0)\n",
     "    df['pos_ret'] = df['DD.ret'] * df['vol_quantile_pos']\n",
     "    df['neg_ret'] = df['DD.ret'] * df['vol_quantile_neg']\n",
     "    df['pos_quantile'] = df.groupby(['date', 'minute'])['pos_ret'].transform('sum')\n",
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -1330,38 +1330,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.389131</td>\n",
-       "      <td>-3.310574</td>\n",
-       "      <td>0.359980</td>\n",
+       "      <td>6.729420</td>\n",
+       "      <td>-9.121371</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.402329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.389131</td>\n",
-       "      <td>-3.310574</td>\n",
-       "      <td>0.510476</td>\n",
+       "      <td>6.729420</td>\n",
+       "      <td>-9.121371</td>\n",
+       "      <td>-0.455114</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.389131</td>\n",
-       "      <td>-3.310574</td>\n",
+       "      <td>6.729420</td>\n",
+       "      <td>-9.121371</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1.299351</td>\n",
+       "      <td>0.428045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.389131</td>\n",
-       "      <td>-3.310574</td>\n",
+       "      <td>6.729420</td>\n",
+       "      <td>-9.121371</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.209397</td>\n",
+       "      <td>3.719608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.389131</td>\n",
-       "      <td>-3.310574</td>\n",
-       "      <td>-0.658892</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>6.729420</td>\n",
+       "      <td>-9.121371</td>\n",
+       "      <td>-1.396342</td>\n",
+       "      <td>-0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1372,38 +1372,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
-       "      <td>-0.559043</td>\n",
-       "      <td>-0.161340</td>\n",
-       "      <td>-0.000000</td>\n",
-       "      <td>-0.898705</td>\n",
+       "      <td>6.126707</td>\n",
+       "      <td>-0.236878</td>\n",
+       "      <td>0.585128</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
-       "      <td>-0.559043</td>\n",
-       "      <td>-0.161340</td>\n",
+       "      <td>6.126707</td>\n",
+       "      <td>-0.236878</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.100080</td>\n",
+       "      <td>0.425400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
-       "      <td>-0.559043</td>\n",
-       "      <td>-0.161340</td>\n",
+       "      <td>6.126707</td>\n",
+       "      <td>-0.236878</td>\n",
+       "      <td>1.304384</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.003670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
-       "      <td>-0.559043</td>\n",
-       "      <td>-0.161340</td>\n",
-       "      <td>-2.024805</td>\n",
-       "      <td>-0.000000</td>\n",
+       "      <td>6.126707</td>\n",
+       "      <td>-0.236878</td>\n",
+       "      <td>0.292434</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
-       "      <td>-0.559043</td>\n",
-       "      <td>-0.161340</td>\n",
-       "      <td>0.663702</td>\n",
+       "      <td>6.126707</td>\n",
+       "      <td>-0.236878</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.974833</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1412,22 +1412,22 @@
       ],
       "text/plain": [
        "     pos_quantile  neg_quantile  pos_imbalance  neg_imbalance\n",
-       "0        1.389131     -3.310574       0.359980       0.000000\n",
-       "1        1.389131     -3.310574       0.510476       0.000000\n",
-       "2        1.389131     -3.310574       0.000000       1.299351\n",
-       "3        1.389131     -3.310574       0.000000       0.209397\n",
-       "4        1.389131     -3.310574      -0.658892       0.000000\n",
+       "0        6.729420     -9.121371       0.000000       0.402329\n",
+       "1        6.729420     -9.121371      -0.455114       0.000000\n",
+       "2        6.729420     -9.121371       0.000000       0.428045\n",
+       "3        6.729420     -9.121371       0.000000       3.719608\n",
+       "4        6.729420     -9.121371      -1.396342      -0.000000\n",
        "..            ...           ...            ...            ...\n",
-       "995     -0.559043     -0.161340      -0.000000      -0.898705\n",
-       "996     -0.559043     -0.161340       0.000000       0.100080\n",
-       "997     -0.559043     -0.161340       0.000000       0.003670\n",
-       "998     -0.559043     -0.161340      -2.024805      -0.000000\n",
-       "999     -0.559043     -0.161340       0.663702       0.000000\n",
+       "995      6.126707     -0.236878       0.585128       0.000000\n",
+       "996      6.126707     -0.236878       0.000000       0.425400\n",
+       "997      6.126707     -0.236878       1.304384       0.000000\n",
+       "998      6.126707     -0.236878       0.292434       0.000000\n",
+       "999      6.126707     -0.236878       0.000000       0.974833\n",
        "\n",
        "[1000 rows x 4 columns]"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
