--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -2471,10 +2471,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def correlation(x, y):\n",
+    "    x = np.array(x)\n",
+    "    y = np.array(y)\n",
+    "    return x @ y / (np.sqrt(x @ x) * np.sqrt(y @ y))\n",
+    "\n",
+    "def get_correlation(data, i, j):\n",
+    "    #get the correlation of time series 0 to i and j to i + j\n",
+    "    #data has columns: ['date', 'interval', 'msymbol_ukey', 'DD.ret']\n",
+    "\n",
+    "    r = data['ret'].fillna(0)\n",
+    "    def get_corr(x):\n",
+    "        return correlation(x[0:i], x[j:i + j])\n",
+    "    r = r.rolling(i + j).transform(get_corr).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_sparsity(data)\n",
+    "    #get the sparsity of the time series, times return by sparsity\n",
+    "\n",
+    "    #sparsity is the number of zero between the previous non-zero and the next non-zero\n",
+    "    data['sparsity'] = 0\n",
+    "    data['sparsity'] = data['sparsity'].where(data['ret'] == 0, 1)\n",
+    "    #get the sum of each consecutive sevral 1\n",
+    "    data['sparsity'] = data['sparsity'].rolling(10).sum().fillna(0)\n",
+    "    #sum of sparsity*ret\n",
+    "    data['sparsity'] = data['sparsity'] * data['ret']\n",
+    "    return data['sparsity'].groupby(['minute']).sum()"
+   ]
   }
  ],
  "metadata": {
