--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -2586,6 +2586,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 346,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#generate onehot encoding\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([0, 1, 2, 3, 4, 5, 4])\n",
+    "x = np.eye(6)[x]\n",
+    "\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 312,
    "metadata": {},
    "outputs": [],
@@ -2737,10 +2769,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lightgbm as lgb\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np\n",
+    "from lightgbm import LGBMRegressor\n",
+    "\n",
+    "\n",
+    "num_samples = 1000\n",
+    "X = np.random.randn(num_samples, 5)\n",
+    "Y = np.random.randn(num_samples, 1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "params = {\n",
+    "    'boosting_type': 'gbdt',\n",
+    "    'objective': 'regression',\n",
+    "    'metric': 'mse',\n",
+    "    'num_leaves': 31,\n",
+    "    'learning_rate': 0.1,\n",
+    "    'feature_fraction': 0.9}\n",
+    "gbm = lgb.train(params,\n",
+    "                lgb.Dataset(X_train, label=y_train),"
+   ]
   }
  ],
  "metadata": {
