--- a/Autoencoder.ipynb
+++ b/Autoencoder.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,11 +155,100 @@
     "            if epoch % 100 == 0:\n",
     "                print('Epoch: {} Loss: {}'.format(epoch, loss.item()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Epoch: 0 [0/64 (0%)]\tLoss: 1.029464\n",
+      "Train Epoch: 1 [0/64 (0%)]\tLoss: 1.021600\n",
+      "Train Epoch: 2 [0/64 (0%)]\tLoss: 1.014361\n",
+      "Train Epoch: 3 [0/64 (0%)]\tLoss: 1.007731\n",
+      "Train Epoch: 4 [0/64 (0%)]\tLoss: 1.001698\n",
+      "Train Epoch: 5 [0/64 (0%)]\tLoss: 0.996092\n",
+      "Train Epoch: 6 [0/64 (0%)]\tLoss: 0.990910\n",
+      "Train Epoch: 7 [0/64 (0%)]\tLoss: 0.986023\n",
+      "Train Epoch: 8 [0/64 (0%)]\tLoss: 0.981444\n",
+      "Train Epoch: 9 [0/64 (0%)]\tLoss: 0.977138\n",
+      "Train Epoch: 0 [0/64 (0%)]\tLoss: 32.458233\n",
+      "Train Epoch: 1 [0/64 (0%)]\tLoss: 28.404478\n",
+      "Train Epoch: 2 [0/64 (0%)]\tLoss: 24.836149\n",
+      "Train Epoch: 3 [0/64 (0%)]\tLoss: 21.695860\n",
+      "Train Epoch: 4 [0/64 (0%)]\tLoss: 18.963074\n",
+      "Train Epoch: 5 [0/64 (0%)]\tLoss: 16.590847\n",
+      "Train Epoch: 6 [0/64 (0%)]\tLoss: 14.542610\n",
+      "Train Epoch: 7 [0/64 (0%)]\tLoss: 12.766900\n",
+      "Train Epoch: 8 [0/64 (0%)]\tLoss: 11.267582\n",
+      "Train Epoch: 9 [0/64 (0%)]\tLoss: 9.981268\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch    \n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "X = torch.randn(64, 100) # 64 samples, 100 features\n",
+    "y = torch.randn(64, 100) # 64 samples, 1 target\n",
+    "train_dataset = torch.utils.data.TensorDataset(X, y)\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "\n",
+    "model = Autoencoder(input_size=100, hidden_size=50)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+    "for epoch in range(10):\n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(data)\n",
+    "        loss = F.mse_loss(output, target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
+    "            epoch, batch_idx * len(data), len(train_loader.dataset),\n",
+    "            100. * batch_idx / len(train_loader), loss.item()))\n",
+    "\n",
+    "def loss_function(output, target, mu, logvar):\n",
+    "    BCE = F.mse_loss(output, target)\n",
+    "\n",
+    "    KLD = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
+    "    return BCE + KLD     \n",
+    "model = VAE(input_size=100, hidden_size=50, latent_size=10)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+    "for epoch in range(10):\n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "        optimizer.zero_grad()\n",
+    "        output, mu, logvar = model(data)\n",
+    "\n",
+    "        loss = loss_function(output, target, mu, logvar)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
+    "            epoch, batch_idx * len(data), len(train_loader.dataset),\n",
+    "            100. * batch_idx / len(train_loader), loss.item()))\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
