--- a/Autoencoder.ipynb
+++ b/Autoencoder.ipynb
@@ -20,14 +20,26 @@
     "import torch.nn.functional as F\n",
     "\n",
     "class Autoencoder(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size):\n",
+    "    def __init__(self, input_size, hidden_size, latent_size, num_layers):\n",
     "        super(Autoencoder, self).__init__()\n",
-    "        self.encoder = nn.Sequential(\n",
-    "            nn.Linear(input_size, hidden_size),\n",
-    "            nn.ReLU(True))\n",
-    "        self.decoder = nn.Sequential(\n",
-    "            nn.Linear(hidden_size, input_size),\n",
-    "            nn.ReLU(True))\n",
+    "\n",
+    "        self.encoder = nn.Sequential()\n",
+    "        self.decoder = nn.Sequential()\n",
+    "        \n",
+    "        for i in range(num_layers):\n",
+    "            if i == 0:\n",
+    "                self.encoder.add_module('encoder_layer{}'.format(i), nn.Linear(input_size, hidden_size))\n",
+    "                self.encoder.add_module('encoder_relu{}'.format(i), nn.ReLU())\n",
+    "                self.decoder.add_module('decoder_layer{}'.format(i), nn.Linear(latent_size, hidden_size))\n",
+    "                self.decoder.add_module('decoder_relu{}'.format(i), nn.ReLU())\n",
+    "            elif i == num_layers - 1:\n",
+    "                self.encoder.add_module('encoder_layer{}'.format(i), nn.Linear(hidden_size, latent_size))\n",
+    "                self.decoder.add_module('decoder_layer{}'.format(i), nn.Linear(hidden_size, input_size))\n",
+    "            else:\n",
+    "                self.encoder.add_module('encoder_layer{}'.format(i), nn.Linear(hidden_size, hidden_size))\n",
+    "                self.decoder.add_module('decoder_layer{}'.format(i), nn.Linear(hidden_size, hidden_size))\n",
+    "                self.encoder.add_module('encoder_relu{}'.format(i), nn.ReLU())\n",
+    "                self.decoder.add_module('decoder_relu{}'.format(i), nn.ReLU())\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.encoder(x)\n",
@@ -35,18 +47,29 @@
     "        return x\n",
     "    \n",
     "class VAE(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, latent_size):\n",
+    "    def __init__(self, input_size, hidden_size, latent_size, num_layers):\n",
     "        super(VAE, self).__init__()\n",
-    "        self.encoder = nn.Sequential(\n",
-    "            nn.Linear(input_size, hidden_size),\n",
-    "            nn.ReLU(True))\n",
-    "        self.mu = nn.Linear(hidden_size, latent_size)\n",
-    "        self.logvar = nn.Linear(hidden_size, latent_size)\n",
-    "        self.decoder = nn.Sequential(\n",
-    "            nn.Linear(latent_size, hidden_size),\n",
-    "            nn.ReLU(True),\n",
-    "            nn.Linear(hidden_size, input_size),\n",
-    "            nn.ReLU(True))\n",
+    "\n",
+    "        self.encoder = nn.Sequential()\n",
+    "        self.decoder = nn.Sequential()\n",
+    "\n",
+    "        for i in range(num_layers):\n",
+    "            if i == 0:\n",
+    "                self.encoder.add_module('encoder_layer{}'.format(i), nn.Linear(input_size, hidden_size))\n",
+    "                self.encoder.add_module('encoder_relu{}'.format(i), nn.ReLU())\n",
+    "                self.decoder.add_module('decoder_layer{}'.format(i), nn.Linear(latent_size, hidden_size))\n",
+    "                self.decoder.add_module('decoder_relu{}'.format(i), nn.ReLU())\n",
+    "            elif i == num_layers - 1:\n",
+    "                self.encoder.add_module('encoder_layer{}'.format(i), nn.Linear(hidden_size, latent_size))\n",
+    "                self.decoder.add_module('decoder_layer{}'.format(i), nn.Linear(hidden_size, input_size))\n",
+    "            else:\n",
+    "                self.encoder.add_module('encoder_layer{}'.format(i), nn.Linear(hidden_size, hidden_size))\n",
+    "                self.decoder.add_module('decoder_layer{}'.format(i), nn.Linear(hidden_size, hidden_size))\n",
+    "                self.encoder.add_module('encoder_relu{}'.format(i), nn.ReLU())\n",
+    "                self.decoder.add_module('decoder_relu{}'.format(i), nn.ReLU())\n",
+    "        \n",
+    "        self.mu = nn.Linear(latent_size, latent_size)\n",
+    "        self.logvar = nn.Linear(latent_size, latent_size)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.encoder(x)\n",
@@ -54,8 +77,8 @@
     "        logvar = self.logvar(x)\n",
     "        std = torch.exp(0.5*logvar)\n",
     "        eps = torch.randn_like(std)\n",
-    "        z = mu + eps*std\n",
-    "        x = self.decoder(z)\n",
+    "        x = eps.mul(std).add_(mu)\n",
+    "        x = self.decoder(x)\n",
     "        return x, mu, logvar\n",
     "    \n"
    ]
