--- a/Autoencoder.ipynb
+++ b/Autoencoder.ipynb
@@ -253,6 +253,24 @@
     "            epoch, batch_idx * len(data), len(train_loader.dataset),\n",
     "            100. * batch_idx / len(train_loader), loss.item()))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
+    "        self.fc2 = nn.Linear(hidden_size, output_size)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        return x"
+   ]
   }
  ],
  "metadata": {
