--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -2802,6 +2802,115 @@
     "gbm = lgb.train(params,\n",
     "                lgb.Dataset(X_train, label=y_train),"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CRNN(nn.Module):\n",
+    "    #CNN + RNN\n",
+    "    def __init__(self, input_len, input_dim, hidden_size, layer_num, dropout=0.5, bidirectional=True, kernel_size=3):\n",
+    "        super(CRNN, self).__init__()\n",
+    "        self.input_len = input_len\n",
+    "        self.input_dim = input_dim\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.kernel_size = kernel_size\n",
+    "        self.layer_num = layer_num\n",
+    "        self.dropout = dropout\n",
+    "        #embedding\n",
+    "        self.bidirectional = bidirectional\n",
+    "        self.conv1 = nn.Conv1d(self.input_dim, self.hidden_size, self.kernel_size, padding=self.kernel_size // 2)\n",
+    "        self.rnn = nn.GRU(self.hidden_size, self.hidden_size, self.layer_num, batch_first=True, dropout=self.dropout, bidirectional = self.bidirectional)\n",
+    "        self.out = nn.Linear(self.hidden_size * (1 + int(self.bidirectional)), 1)\n",
+    "        self.init_weights()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        _, hn = self.rnn(x)\n",
+    "        h = hn[-(1 + int(self.bidirectional)):]\n",
+    "        x = torch.cat(h.split(1), dim=-1).squeeze(0)\n",
+    "        x = self.out(x)\n",
+    "        return x\n",
+    "        \n",
+    "class CLSTM(nn.Module):\n",
+    "    #CNN + LSTM\n",
+    "    def __init__(self, input_len, input_dim, hidden_size, layer_num, dropout=0.5, bidirectional=True, kernel_size=3):\n",
+    "        super(CLSTM, self).__init__()\n",
+    "        self.input_len = input_len\n",
+    "        self.input_dim = input_dim\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.kernel_size = kernel_size\n",
+    "        self.layer_num = layer_num\n",
+    "        self.dropout = dropout\n",
+    "        #embedding\n",
+    "        self.bidirectional = bidirectional\n",
+    "        self.conv1 = nn.Conv1d(self.input_dim, self.hidden_size, self.kernel_size, padding=self.kernel_size // 2)\n",
+    "        self.rnn = nn.LSTM(self.hidden_size, self.hidden_size, self.layer_num, batch_first=True, dropout=self.dropout, bidirectional = self.bidirectional)\n",
+    "        self.out = nn.Linear(self.hidden_size * (1 + int(self.bidirectional)), 1)\n",
+    "        self.init_weights()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        _, (hn, _) = self.rnn(x)\n",
+    "        h = hn[-(1 + int(self.bidirectional)):]\n",
+    "        x = torch.cat(h.split(1), dim=-1).squeeze(0)\n",
+    "        x = self.out(x)\n",
+    "        return x\n",
+    "\n",
+    "class RCNN(nn.Module):\n",
+    "    #RNN + CNN\n",
+    "    def __init__(self, input_len, input_dim, hidden_size, layer_num, dropout=0.5, bidirectional=True, kernel_size=3):\n",
+    "        super(RCNN, self).__init__()\n",
+    "        self.input_len = input_len\n",
+    "        self.input_dim = input_dim\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.kernel_size = kernel_size\n",
+    "        self.layer_num = layer_num\n",
+    "        self.dropout = dropout\n",
+    "        #embedding\n",
+    "        self.bidirectional = bidirectional\n",
+    "        self.rnn = nn.GRU(self.input_dim, self.hidden_size, self.layer_num, batch_first=True, dropout=self.dropout, bidirectional = self.bidirectional)\n",
+    "        self.conv1 = nn.Conv1d(self.hidden_size * (1 + int(self.bidirectional)), self.hidden_size, self.kernel_size, padding=self.kernel_size // 2)\n",
+    "        self.out = nn.Linear(self.hidden_size * self.input_len, 1)\n",
+    "        self.init_weights()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x,_ = self.rnn(x)\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = self.out(x)\n",
+    "        return x\n",
+    "\n",
+    "class LCNN(nn.Module):\n",
+    "    #LSTM + CNN\n",
+    "    def __init__(self, input_len, input_dim, hidden_size, layer_num, dropout=0.5, bidirectional=True, kernel_size=3):\n",
+    "        super(LCNN, self).__init__()\n",
+    "        self.input_len = input_len\n",
+    "        self.input_dim = input_dim\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.kernel_size = kernel_size\n",
+    "        self.layer_num = layer_num\n",
+    "        self.dropout = dropout\n",
+    "        #embedding\n",
+    "        self.bidirectional = bidirectional\n",
+    "        self.rnn = nn.LSTM(self.input_dim, self.hidden_size, self.layer_num, batch_first=True, dropout=self.dropout, bidirectional = self.bidirectional)\n",
+    "        self.conv1 = nn.Conv1d(self.hidden_size * (1 + int(self.bidirectional)), self.hidden_size, self.kernel_size, padding=self.kernel_size // 2)\n",
+    "        self.out = nn.Linear(self.hidden_size * self.input_len, 1)\n",
+    "        self.init_weights()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x,_ = self.rnn(x)\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = self.out(x)\n",
+    "        return x"
+   ]
   }
  ],
  "metadata": {
