--- a/Autoencoder.ipynb
+++ b/Autoencoder.ipynb
@@ -261,14 +261,17 @@
    "outputs": [],
    "source": [
     "class MLP(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "    def __init__(self, input_size, hidden_size, output_size, dropout=0.5):\n",
     "        super(MLP, self).__init__()\n",
     "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
     "        self.fc2 = nn.Linear(hidden_size, output_size)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        x = F.relu(self.fc1(x))\n",
-    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.dropout(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.fc2(x)\n",
     "        return x"
    ]
   }
