--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -2826,6 +2826,10 @@
     "        self.out = nn.Linear(self.hidden_size * (1 + int(self.bidirectional)), 1)\n",
     "        self.init_weights()\n",
     "\n",
+    "    def init_weights(self):\n",
+    "        torch.nn.init.xavier_uniform_(self.conv1.weight)\n",
+    "        torch.nn.init.xavier_uniform_(self.out.weight)\n",
+    "\n",
     "    def forward(self, x):\n",
     "        x = self.conv1(x)\n",
     "        x = F.relu(x)\n",
@@ -2835,6 +2839,8 @@
     "        x = self.out(x)\n",
     "        return x\n",
     "        \n",
+    "\n",
+    "\n",
     "class CLSTM(nn.Module):\n",
     "    #CNN + LSTM\n",
     "    def __init__(self, input_len, input_dim, hidden_size, layer_num, dropout=0.5, bidirectional=True, kernel_size=3):\n",
@@ -2851,6 +2857,10 @@
     "        self.rnn = nn.LSTM(self.hidden_size, self.hidden_size, self.layer_num, batch_first=True, dropout=self.dropout, bidirectional = self.bidirectional)\n",
     "        self.out = nn.Linear(self.hidden_size * (1 + int(self.bidirectional)), 1)\n",
     "        self.init_weights()\n",
+    "\n",
+    "    def init_weights(self):\n",
+    "        torch.nn.init.xavier_uniform_(self.conv1.weight)\n",
+    "        torch.nn.init.xavier_uniform_(self.out.weight)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.conv1(x)\n",
@@ -2878,6 +2888,10 @@
     "        self.out = nn.Linear(self.hidden_size * self.input_len, 1)\n",
     "        self.init_weights()\n",
     "\n",
+    "    def init_weights(self):\n",
+    "        torch.nn.init.xavier_uniform_(self.conv1.weight)\n",
+    "        torch.nn.init.xavier_uniform_(self.out.weight)\n",
+    "        \n",
     "    def forward(self, x):\n",
     "        x,_ = self.rnn(x)\n",
     "        x = self.conv1(x)\n",
@@ -2902,6 +2916,10 @@
     "        self.conv1 = nn.Conv1d(self.hidden_size * (1 + int(self.bidirectional)), self.hidden_size, self.kernel_size, padding=self.kernel_size // 2)\n",
     "        self.out = nn.Linear(self.hidden_size * self.input_len, 1)\n",
     "        self.init_weights()\n",
+    "\n",
+    "    def init_weights(self):\n",
+    "        torch.nn.init.xavier_uniform_(self.conv1.weight)\n",
+    "        torch.nn.init.xavier_uniform_(self.out.weight)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x,_ = self.rnn(x)\n",
