--- a/1d-CNN.ipynb
+++ b/1d-CNN.ipynb
@@ -2929,6 +2929,16 @@
     "        x = self.out(x)\n",
     "        return x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test\n",
+    "model = RCNN(input_len = 100, input_dim = 1, output_dim = 1, num_layers = 1, hidden_dim = 32, kernel_size = 3, dropout = 0.5)\n"
+   ]
   }
  ],
  "metadata": {
