--- a/sklearn_models.ipynb
+++ b/sklearn_models.ipynb
@@ -427,18 +427,21 @@
     "\n",
     "\n",
     "class FaissKNNRegressor:\n",
-    "    def __init__(self, n_neighbors=5, weights='uniform'):\n",
+    "    def __init__(self, n_neighbors=5, weights='uniform', n_jobs=-1):\n",
     "        self.n_neighbors = n_neighbors\n",
     "        self.index = None\n",
     "        self.y = None\n",
     "        self.weights = weights\n",
+    "        self.n_jobs = n_jobs\n",
     "\n",
-    "    def fit(self, X, y):\n",
+    "    def fit_GPU(self, X, y):\n",
     "        self.y = y\n",
     "        self.index = faiss.IndexFlatL2(X.shape[1])\n",
+    "        self.index = faiss.index_cpu_to_all_gpus(self.index)\n",
     "        self.index.add(X.astype(np.float32))\n",
     "\n",
     "    def predict(self, X):\n",
+    "\n",
     "        distances, indices = self.index.search(X.astype(np.float32), self.n_neighbors)\n",
     "        if self.weights == 'uniform':\n",
     "            weights = np.ones((self.n_neighbors, 1))\n",
