--- a/sklearn_models.ipynb
+++ b/sklearn_models.ipynb
@@ -443,14 +443,54 @@
     "    def predict(self, X):\n",
     "\n",
     "        distances, indices = self.index.search(X.astype(np.float32), self.n_neighbors)\n",
+    "        #weight is of shape (n_samples, n_neighbors)\n",
     "        if self.weights == 'uniform':\n",
-    "            weights = np.ones((self.n_neighbors, 1))\n",
+    "            weights = np.ones((X.shape[0], self.n_neighbors))\n",
+    "            #normalize weights\n",
+    "            weights = weights / np.sum(weights, axis=1)[:, np.newaxis]\n",
     "        elif self.weights == 'distance':\n",
     "            weights = 1 / distances\n",
+    "            weights = weights / np.sum(weights, axis=1)\n",
     "        else:\n",
     "            raise ValueError(\"weights must be 'uniform' or 'distance'\")\n",
-    "        weights /= np.sum(weights, axis=1).reshape(-1, 1)\n",
+    "        \n",
     "        return np.sum(self.y[indices] * weights, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#user\n",
+    "#random tensor\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "101//2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#integrate dictionary\n",
+    "x = {**x, **y}"
    ]
   }
  ],
