--- a/sklearn_models.ipynb
+++ b/sklearn_models.ipynb
@@ -489,8 +489,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#integrate dictionary\n",
-    "x = {**x, **y}"
+    "class annoyKNNRegressor:\n",
+    "    def __init__(self, n_neighbors=5, metric='euclidean', n_trees=10):\n",
+    "        self.n_neighbors = n_neighbors\n",
+    "        self.metric = metric\n",
+    "        self.n_trees = n_trees\n",
+    "        self.model = None\n",
+    "        self.y_train = None\n",
+    "\n",
+    "    def fit(self, X_train, y_train):\n",
+    "        self.y_train = y_train\n",
+    "        f = X_train.shape[1]\n",
+    "        self.model = AnnoyIndex(f, self.metric)\n",
+    "        for i in range(X_train.shape[0]):\n",
+    "            self.model.add_item(i, X_train[i])\n",
+    "        self.model.build(self.n_trees)\n",
+    "\n",
+    "    def predict(self, X_test, method='distance'):\n",
+    "        y_pred = []\n",
+    "        for i in range(0, X_test.shape[0]):\n",
+    "            if method == 'distance':\n",
+    "                index, dist = self.model.get_nns_by_vector(X_test[i], self.n_neighbors, include_distances=True)\n",
+    "                weights = [1 / (1 + d) for d in dist]\n",
+    "                y_pred.append(np.average(self.y_train[index], weights=weights))\n",
+    "            elif method == 'mean':\n",
+    "                index = self.model.get_nns_by_vector(X_test[i], self.n_neighbors, include_distances=False)\n",
+    "                y_pred.append(np.mean(self.y_train[index]))\n",
+    "        \n",
+    "        return np.array(y_pred)\n",
+    "            \n",
+    "    def get_params(self, deep=True):\n",
+    "        return {'n_neighbors': self.n_neighbors, 'metric': self.metric, 'n_trees': self.n_trees}\n",
+    "\n",
+    "    def set_params(self, **parameters):\n",
+    "        for parameter, value in parameters.items():\n",
+    "            setattr(self, parameter, value)\n",
+    "        return self\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"annoyKNNRegressor(n_neighbors=%d, metric=%s, n_trees=%d)\" % (self.n_neighbors, self.metric, self.n_trees)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return self.__str__()"
    ]
   }
  ],
